--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SVG Filter Maker</title>
+		<meta name="description" content="SVGFM, a node graph builder for SVG filters" />
+		<meta name="author" content="chriskirknielsen" />
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="icon" href="./icon.svg" />
+		<meta property="og:image" content="./meta.png" />
+		<meta property="og:image:alt" content="SVG Filter Maker" />
 	</head>
 	<body>
 		<header>
