--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta name="author" content="chriskirknielsen" />
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="icon" href="./icon.svg" />
-		<meta property="og:image" content="./meta.png" />
-		<meta property="og:image:alt" content="SVG Filter Maker" />
+		<meta property="og:image" name="twitter:image" content="./meta.png" />
+		<meta property="og:image:alt" name="twitter:image:alt" content="SVG Filter Maker" />
 	</head>
 	<body>
 		<header>
