--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="chriskirknielsen" />
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="icon" href="./icon.svg" />
-		<meta property="og:image" name="twitter:image" content="./meta.png" />
+		<meta property="og:image" name="twitter:image" content="https://svgfm.chriskirknielsen.com//meta.png" />
 		<meta property="og:image:alt" name="twitter:image:alt" content="SVG Filter Maker" />
 	</head>
 	<body>
