Don't output hidden conditional attributes in the final code, add readme/licence

--- a/index.html
+++ b/index.html
@@ -111,10 +111,18 @@
 						This app will mostly do what you tell it to. This means that there is no real validation to ensure it is valid SVG code, though if the preview is broken,
 						the configuration is likely invalid.
 					</li>
+					<li>Found an accessibility issue? Please tell me!</li>
 				</ul>
+
+				<h3>Give feedback &amp; Contribute</h3>
+				<p>
+					I'm happy to take your feedback on Mastodon, but <a href="https://github.com/chriskirknielsen/svgfm">the SVGFM repo on GitHub</a> is works too, which is also
+					the place you'd contribute if you were so inclined. Thank you!
+				</p>
 
 				<h3>Credits</h3>
 				<p>UI button icons provided by <a href="https://iconsvg.xyz/">iconsvg.xyz</a>.</p>
+				<p>Adorable kitten in the preview from <a href="https://placekitten.com/">placekitten.com</a></p>
 			</div>
 		</div>
 
