--- a/index.html
+++ b/index.html
@@ -111,13 +111,17 @@
 						This app will mostly do what you tell it to. This means that there is no real validation to ensure it is valid SVG code, though if the preview is broken,
 						the configuration is likely invalid.
 					</li>
-					<li>Found an accessibility issue? Please tell me!</li>
+					<li>
+						Found an accessibility issue? Please tell me! (except about <code>target=_blank</code> links, simply because I don't want to accidentally cause you to lose
+						your filters)
+					</li>
 				</ul>
 
 				<h3>Give feedback &amp; Contribute</h3>
 				<p>
-					I'm happy to take your feedback on Mastodon, but <a href="https://github.com/chriskirknielsen/svgfm">the SVGFM repo on GitHub</a> is works too, which is also
-					the place you'd contribute if you were so inclined. Thank you!
+					I'm happy to take your feedback <a href="https://mastodon.social/@chriskirknielsen" target="_blank">on Mastodon</a>, but
+					<a href="https://github.com/chriskirknielsen/svgfm" target="_blank">the SVGFM repo on GitHub</a> is works too, which is also the place you'd contribute if you
+					were so inclined. Thank you!
 				</p>
 
 				<h3>Credits</h3>
