More target=_blank!

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 				</p>
 
 				<h3>Credits</h3>
-				<p>UI button icons provided by <a href="https://iconsvg.xyz/">iconsvg.xyz</a>.</p>
-				<p>Adorable kitten in the preview from <a href="https://placekitten.com/">placekitten.com</a></p>
+				<p>UI button icons provided by <a href="https://iconsvg.xyz/" target="_blank">iconsvg.xyz</a>.</p>
+				<p>Adorable kitten in the preview from <a href="https://placekitten.com/" target="_blank">placekitten.com</a></p>
 			</div>
 		</div>
 
