"Logo"/meta image tweaks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="chriskirknielsen" />
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="icon" href="./icon.svg" />
-		<meta property="og:image" name="twitter:image" content="https://svgfm.chriskirknielsen.com//meta.png" />
+		<meta property="og:image" name="twitter:image" content="https://svgfm.chriskirknielsen.com/meta.png" />
 		<meta property="og:image:alt" name="twitter:image:alt" content="SVG Filter Maker" />
 	</head>
 	<body>
@@ -126,7 +126,7 @@
 
 				<h3>Credits</h3>
 				<p>UI button icons provided by <a href="https://iconsvg.xyz/" target="_blank">iconsvg.xyz</a>.</p>
-				<p>Adorable kitten in the preview from <a href="https://placekitten.com/" target="_blank">placekitten.com</a></p>
+				<p>Adorable kitten in the preview from <a href="https://placekitten.com/" target="_blank">placekitten.com</a>.</p>
 			</div>
 		</div>
 
