Minor accessibility improvements

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						stroke-width="2"
 						stroke-linecap="round"
 						stroke-linejoin="arcs"
+						aria-hidden="true"
 					>
 						<path d="M2.5 2v6h6M2.66 15.57a10 10 0 1 0 .57-8.38" />
 					</svg>
@@ -42,6 +43,7 @@
 						stroke-width="2"
 						stroke-linecap="round"
 						stroke-linejoin="arcs"
+						aria-hidden="true"
 					>
 						<circle cx="12" cy="12" r="10"></circle>
 						<line x1="12" y1="16" x2="12" y2="12"></line>
@@ -76,6 +78,7 @@
 						stroke-width="2"
 						stroke-linecap="round"
 						stroke-linejoin="arcs"
+						aria-hidden="true"
 					>
 						<line x1="18" y1="6" x2="6" y2="18"></line>
 						<line x1="6" y1="6" x2="18" y2="18"></line>
