Fix inert issue, whoops

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 			});
 			document.addEventListener('keyup', (e) => {
 				if (e.key === 'Escape') {
-					appInfoWindow.hidden = true;
+					toggleInfoWindow(false);
 				}
 			});
 		</script>
