Update Mastodon handle
Quintessential!

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 				<h3>Give feedback &amp; Contribute</h3>
 				<p>
-					I'm happy to take your feedback <a href="https://mastodon.social/@chriskirknielsen" target="_blank">on Mastodon</a>, but
+					I'm happy to take your feedback <a href="https://front-end.social/@chriskirknielsen" target="_blank">on Mastodon</a>, but
 					<a href="https://github.com/chriskirknielsen/svgfm" target="_blank">the SVGFM repo on GitHub</a> is works too, which is also the place you'd contribute if you
 					were so inclined. Thank you!
 				</p>
